[project]
name = "mcap-lidar-extractor"
version = "1.0.0"
description = "从 MCAP 文件中提取万集 WLR-722Z 激光雷达点云"
authors = [{name = "Your Team"}]
requires-python = ">=3.8"
dependencies = [
    "mcap>=0.5.0",
    "numpy>=1.20.0",
    "open3d>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "pylint>=2.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
